Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     program -> <empty>
Rule 3     instructions -> instructions instruction
Rule 4     instructions -> instruction
Rule 5     instruction -> IF ( condition ) instruction
Rule 6     instruction -> IF ( condition ) instruction ELSE instruction
Rule 7     instruction -> FOR ID ASSIGN expression : expression instruction
Rule 8     instruction -> WHILE ( condition ) instruction
Rule 9     instruction -> { instructions }
Rule 10    instruction -> one_line_instruction ;
Rule 11    one_line_instruction -> left_value ASSIGN expression
Rule 12    one_line_instruction -> left_value PLUSASSIGN expression
Rule 13    one_line_instruction -> left_value MINUSASSIGN expression
Rule 14    one_line_instruction -> left_value TIMESASSIGN expression
Rule 15    one_line_instruction -> left_value DIVIDEASSIGN expression
Rule 16    one_line_instruction -> RETURN expressions
Rule 17    one_line_instruction -> BREAK
Rule 18    one_line_instruction -> PRINT expressions
Rule 19    one_line_instruction -> CONTINUE
Rule 20    expressions -> expressions , expression
Rule 21    expressions -> expression
Rule 22    expression -> left_value
Rule 23    left_value -> ID
Rule 24    left_value -> matrix_id
Rule 25    matrix_id -> ID [ indexes ]
Rule 26    indexes -> indexes , ID
Rule 27    indexes -> indexes , INTEGER
Rule 28    indexes -> INTEGER
Rule 29    indexes -> ID
Rule 30    condition -> expression EQ expression
Rule 31    condition -> expression LT expression
Rule 32    condition -> expression GT expression
Rule 33    condition -> expression LQ expression
Rule 34    condition -> expression GQ expression
Rule 35    condition -> expression NE expression
Rule 36    expression -> INTEGER
Rule 37    expression -> FLOAT
Rule 38    expression -> STRING
Rule 39    expression -> matrix
Rule 40    matrix -> [ vectors ]
Rule 41    matrix -> [ matrix_elements ]
Rule 42    vectors -> vectors , vector
Rule 43    vectors -> vector
Rule 44    vector -> [ matrix_elements ]
Rule 45    matrix_elements -> matrix_elements , ID
Rule 46    matrix_elements -> matrix_elements , FLOAT
Rule 47    matrix_elements -> matrix_elements , INTEGER
Rule 48    matrix_elements -> ID
Rule 49    matrix_elements -> INTEGER
Rule 50    matrix_elements -> FLOAT
Rule 51    expression -> expression + expression
Rule 52    expression -> expression - expression
Rule 53    expression -> expression * expression
Rule 54    expression -> expression / expression
Rule 55    expression -> expression DOTPLUS expression
Rule 56    expression -> expression DOTMINUS expression
Rule 57    expression -> expression DOTTIMES expression
Rule 58    expression -> expression DOTDIVIDE expression
Rule 59    expression -> ZEROS ( expression )
Rule 60    expression -> ONES ( expression )
Rule 61    expression -> EYE ( expression )
Rule 62    expression -> - expression
Rule 63    expression -> expression TRANSPOSITION

Terminals, with rules where they appear

(                    : 5 6 8 59 60 61
)                    : 5 6 8 59 60 61
*                    : 53
+                    : 51
,                    : 20 26 27 42 45 46 47
-                    : 52 62
/                    : 54
:                    : 7
;                    : 10
ASSIGN               : 7 11
BREAK                : 17
CONTINUE             : 19
DIVIDEASSIGN         : 15
DOTDIVIDE            : 58
DOTMINUS             : 56
DOTPLUS              : 55
DOTTIMES             : 57
ELSE                 : 6
EQ                   : 30
EYE                  : 61
FLOAT                : 37 46 50
FOR                  : 7
GQ                   : 34
GT                   : 32
ID                   : 7 23 25 26 29 45 48
IF                   : 5 6
INTEGER              : 27 28 36 47 49
LQ                   : 33
LT                   : 31
MINUSASSIGN          : 13
NE                   : 35
ONES                 : 60
PLUSASSIGN           : 12
PRINT                : 18
RETURN               : 16
STRING               : 38
TIMESASSIGN          : 14
TRANSPOSITION        : 63
WHILE                : 8
ZEROS                : 59
[                    : 25 40 41 44
]                    : 25 40 41 44
error                : 
{                    : 9
}                    : 9

Nonterminals, with rules where they appear

condition            : 5 6 8
expression           : 7 7 11 12 13 14 15 20 21 30 30 31 31 32 32 33 33 34 34 35 35 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 60 61 62 63
expressions          : 16 18 20
indexes              : 25 26 27
instruction          : 3 4 5 6 6 7 8
instructions         : 1 3 9
left_value           : 11 12 13 14 15 22
matrix               : 39
matrix_elements      : 41 44 45 46 47
matrix_id            : 24
one_line_instruction : 10
program              : 0
vector               : 42 43
vectors              : 40 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) program -> .
    (3) instructions -> . instructions instruction
    (4) instructions -> . instruction
    (5) instruction -> . IF ( condition ) instruction
    (6) instruction -> . IF ( condition ) instruction ELSE instruction
    (7) instruction -> . FOR ID ASSIGN expression : expression instruction
    (8) instruction -> . WHILE ( condition ) instruction
    (9) instruction -> . { instructions }
    (10) instruction -> . one_line_instruction ;
    (11) one_line_instruction -> . left_value ASSIGN expression
    (12) one_line_instruction -> . left_value PLUSASSIGN expression
    (13) one_line_instruction -> . left_value MINUSASSIGN expression
    (14) one_line_instruction -> . left_value TIMESASSIGN expression
    (15) one_line_instruction -> . left_value DIVIDEASSIGN expression
    (16) one_line_instruction -> . RETURN expressions
    (17) one_line_instruction -> . BREAK
    (18) one_line_instruction -> . PRINT expressions
    (19) one_line_instruction -> . CONTINUE
    (23) left_value -> . ID
    (24) left_value -> . matrix_id
    (25) matrix_id -> . ID [ indexes ]

    $end            reduce using rule 2 (program -> .)
    IF              shift and go to state 12
    FOR             shift and go to state 2
    WHILE           shift and go to state 10
    {               shift and go to state 11
    RETURN          shift and go to state 8
    BREAK           shift and go to state 7
    PRINT           shift and go to state 3
    CONTINUE        shift and go to state 14
    ID              shift and go to state 4

    instruction                    shift and go to state 5
    one_line_instruction           shift and go to state 15
    left_value                     shift and go to state 9
    program                        shift and go to state 6
    instructions                   shift and go to state 1
    matrix_id                      shift and go to state 13

state 1

    (1) program -> instructions .
    (3) instructions -> instructions . instruction
    (5) instruction -> . IF ( condition ) instruction
    (6) instruction -> . IF ( condition ) instruction ELSE instruction
    (7) instruction -> . FOR ID ASSIGN expression : expression instruction
    (8) instruction -> . WHILE ( condition ) instruction
    (9) instruction -> . { instructions }
    (10) instruction -> . one_line_instruction ;
    (11) one_line_instruction -> . left_value ASSIGN expression
    (12) one_line_instruction -> . left_value PLUSASSIGN expression
    (13) one_line_instruction -> . left_value MINUSASSIGN expression
    (14) one_line_instruction -> . left_value TIMESASSIGN expression
    (15) one_line_instruction -> . left_value DIVIDEASSIGN expression
    (16) one_line_instruction -> . RETURN expressions
    (17) one_line_instruction -> . BREAK
    (18) one_line_instruction -> . PRINT expressions
    (19) one_line_instruction -> . CONTINUE
    (23) left_value -> . ID
    (24) left_value -> . matrix_id
    (25) matrix_id -> . ID [ indexes ]

    $end            reduce using rule 1 (program -> instructions .)
    IF              shift and go to state 12
    FOR             shift and go to state 2
    WHILE           shift and go to state 10
    {               shift and go to state 11
    RETURN          shift and go to state 8
    BREAK           shift and go to state 7
    PRINT           shift and go to state 3
    CONTINUE        shift and go to state 14
    ID              shift and go to state 4

    instruction                    shift and go to state 16
    one_line_instruction           shift and go to state 15
    left_value                     shift and go to state 9
    matrix_id                      shift and go to state 13

state 2

    (7) instruction -> FOR . ID ASSIGN expression : expression instruction

    ID              shift and go to state 17


state 3

    (18) one_line_instruction -> PRINT . expressions
    (20) expressions -> . expressions , expression
    (21) expressions -> . expression
    (22) expression -> . left_value
    (36) expression -> . INTEGER
    (37) expression -> . FLOAT
    (38) expression -> . STRING
    (39) expression -> . matrix
    (51) expression -> . expression + expression
    (52) expression -> . expression - expression
    (53) expression -> . expression * expression
    (54) expression -> . expression / expression
    (55) expression -> . expression DOTPLUS expression
    (56) expression -> . expression DOTMINUS expression
    (57) expression -> . expression DOTTIMES expression
    (58) expression -> . expression DOTDIVIDE expression
    (59) expression -> . ZEROS ( expression )
    (60) expression -> . ONES ( expression )
    (61) expression -> . EYE ( expression )
    (62) expression -> . - expression
    (63) expression -> . expression TRANSPOSITION
    (23) left_value -> . ID
    (24) left_value -> . matrix_id
    (40) matrix -> . [ vectors ]
    (41) matrix -> . [ matrix_elements ]
    (25) matrix_id -> . ID [ indexes ]

    INTEGER         shift and go to state 23
    FLOAT           shift and go to state 27
    STRING          shift and go to state 26
    ZEROS           shift and go to state 28
    ONES            shift and go to state 25
    EYE             shift and go to state 19
    -               shift and go to state 21
    ID              shift and go to state 4
    [               shift and go to state 24

    expressions                    shift and go to state 20
    expression                     shift and go to state 29
    matrix                         shift and go to state 18
    matrix_id                      shift and go to state 13
    left_value                     shift and go to state 22

state 4

    (23) left_value -> ID .
    (25) matrix_id -> ID . [ indexes ]

    +               reduce using rule 23 (left_value -> ID .)
    -               reduce using rule 23 (left_value -> ID .)
    *               reduce using rule 23 (left_value -> ID .)
    /               reduce using rule 23 (left_value -> ID .)
    DOTPLUS         reduce using rule 23 (left_value -> ID .)
    DOTMINUS        reduce using rule 23 (left_value -> ID .)
    DOTTIMES        reduce using rule 23 (left_value -> ID .)
    DOTDIVIDE       reduce using rule 23 (left_value -> ID .)
    TRANSPOSITION   reduce using rule 23 (left_value -> ID .)
    ,               reduce using rule 23 (left_value -> ID .)
    ;               reduce using rule 23 (left_value -> ID .)
    EQ              reduce using rule 23 (left_value -> ID .)
    LT              reduce using rule 23 (left_value -> ID .)
    GT              reduce using rule 23 (left_value -> ID .)
    LQ              reduce using rule 23 (left_value -> ID .)
    GQ              reduce using rule 23 (left_value -> ID .)
    NE              reduce using rule 23 (left_value -> ID .)
    :               reduce using rule 23 (left_value -> ID .)
    )               reduce using rule 23 (left_value -> ID .)
    IF              reduce using rule 23 (left_value -> ID .)
    FOR             reduce using rule 23 (left_value -> ID .)
    WHILE           reduce using rule 23 (left_value -> ID .)
    {               reduce using rule 23 (left_value -> ID .)
    RETURN          reduce using rule 23 (left_value -> ID .)
    BREAK           reduce using rule 23 (left_value -> ID .)
    PRINT           reduce using rule 23 (left_value -> ID .)
    CONTINUE        reduce using rule 23 (left_value -> ID .)
    ID              reduce using rule 23 (left_value -> ID .)
    ASSIGN          reduce using rule 23 (left_value -> ID .)
    PLUSASSIGN      reduce using rule 23 (left_value -> ID .)
    MINUSASSIGN     reduce using rule 23 (left_value -> ID .)
    TIMESASSIGN     reduce using rule 23 (left_value -> ID .)
    DIVIDEASSIGN    reduce using rule 23 (left_value -> ID .)
    [               shift and go to state 30


state 5

    (4) instructions -> instruction .

    IF              reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    {               reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 6

    (0) S' -> program .



state 7

    (17) one_line_instruction -> BREAK .

    ;               reduce using rule 17 (one_line_instruction -> BREAK .)


state 8

    (16) one_line_instruction -> RETURN . expressions
    (20) expressions -> . expressions , expression
    (21) expressions -> . expression
    (22) expression -> . left_value
    (36) expression -> . INTEGER
    (37) expression -> . FLOAT
    (38) expression -> . STRING
    (39) expression -> . matrix
    (51) expression -> . expression + expression
    (52) expression -> . expression - expression
    (53) expression -> . expression * expression
    (54) expression -> . expression / expression
    (55) expression -> . expression DOTPLUS expression
    (56) expression -> . expression DOTMINUS expression
    (57) expression -> . expression DOTTIMES expression
    (58) expression -> . expression DOTDIVIDE expression
    (59) expression -> . ZEROS ( expression )
    (60) expression -> . ONES ( expression )
    (61) expression -> . EYE ( expression )
    (62) expression -> . - expression
    (63) expression -> . expression TRANSPOSITION
    (23) left_value -> . ID
    (24) left_value -> . matrix_id
    (40) matrix -> . [ vectors ]
    (41) matrix -> . [ matrix_elements ]
    (25) matrix_id -> . ID [ indexes ]

    INTEGER         shift and go to state 23
    FLOAT           shift and go to state 27
    STRING          shift and go to state 26
    ZEROS           shift and go to state 28
    ONES            shift and go to state 25
    EYE             shift and go to state 19
    -               shift and go to state 21
    ID              shift and go to state 4
    [               shift and go to state 24

    expressions                    shift and go to state 31
    expression                     shift and go to state 29
    matrix                         shift and go to state 18
    matrix_id                      shift and go to state 13
    left_value                     shift and go to state 22

state 9

    (11) one_line_instruction -> left_value . ASSIGN expression
    (12) one_line_instruction -> left_value . PLUSASSIGN expression
    (13) one_line_instruction -> left_value . MINUSASSIGN expression
    (14) one_line_instruction -> left_value . TIMESASSIGN expression
    (15) one_line_instruction -> left_value . DIVIDEASSIGN expression

    ASSIGN          shift and go to state 35
    PLUSASSIGN      shift and go to state 34
    MINUSASSIGN     shift and go to state 36
    TIMESASSIGN     shift and go to state 32
    DIVIDEASSIGN    shift and go to state 33


state 10

    (8) instruction -> WHILE . ( condition ) instruction

    (               shift and go to state 37


state 11

    (9) instruction -> { . instructions }
    (3) instructions -> . instructions instruction
    (4) instructions -> . instruction
    (5) instruction -> . IF ( condition ) instruction
    (6) instruction -> . IF ( condition ) instruction ELSE instruction
    (7) instruction -> . FOR ID ASSIGN expression : expression instruction
    (8) instruction -> . WHILE ( condition ) instruction
    (9) instruction -> . { instructions }
    (10) instruction -> . one_line_instruction ;
    (11) one_line_instruction -> . left_value ASSIGN expression
    (12) one_line_instruction -> . left_value PLUSASSIGN expression
    (13) one_line_instruction -> . left_value MINUSASSIGN expression
    (14) one_line_instruction -> . left_value TIMESASSIGN expression
    (15) one_line_instruction -> . left_value DIVIDEASSIGN expression
    (16) one_line_instruction -> . RETURN expressions
    (17) one_line_instruction -> . BREAK
    (18) one_line_instruction -> . PRINT expressions
    (19) one_line_instruction -> . CONTINUE
    (23) left_value -> . ID
    (24) left_value -> . matrix_id
    (25) matrix_id -> . ID [ indexes ]

    IF              shift and go to state 12
    FOR             shift and go to state 2
    WHILE           shift and go to state 10
    {               shift and go to state 11
    RETURN          shift and go to state 8
    BREAK           shift and go to state 7
    PRINT           shift and go to state 3
    CONTINUE        shift and go to state 14
    ID              shift and go to state 4

    instruction                    shift and go to state 5
    one_line_instruction           shift and go to state 15
    left_value                     shift and go to state 9
    instructions                   shift and go to state 38
    matrix_id                      shift and go to state 13

state 12

    (5) instruction -> IF . ( condition ) instruction
    (6) instruction -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 39


state 13

    (24) left_value -> matrix_id .

    +               reduce using rule 24 (left_value -> matrix_id .)
    -               reduce using rule 24 (left_value -> matrix_id .)
    *               reduce using rule 24 (left_value -> matrix_id .)
    /               reduce using rule 24 (left_value -> matrix_id .)
    DOTPLUS         reduce using rule 24 (left_value -> matrix_id .)
    DOTMINUS        reduce using rule 24 (left_value -> matrix_id .)
    DOTTIMES        reduce using rule 24 (left_value -> matrix_id .)
    DOTDIVIDE       reduce using rule 24 (left_value -> matrix_id .)
    TRANSPOSITION   reduce using rule 24 (left_value -> matrix_id .)
    ,               reduce using rule 24 (left_value -> matrix_id .)
    ;               reduce using rule 24 (left_value -> matrix_id .)
    EQ              reduce using rule 24 (left_value -> matrix_id .)
    LT              reduce using rule 24 (left_value -> matrix_id .)
    GT              reduce using rule 24 (left_value -> matrix_id .)
    LQ              reduce using rule 24 (left_value -> matrix_id .)
    GQ              reduce using rule 24 (left_value -> matrix_id .)
    NE              reduce using rule 24 (left_value -> matrix_id .)
    :               reduce using rule 24 (left_value -> matrix_id .)
    )               reduce using rule 24 (left_value -> matrix_id .)
    IF              reduce using rule 24 (left_value -> matrix_id .)
    FOR             reduce using rule 24 (left_value -> matrix_id .)
    WHILE           reduce using rule 24 (left_value -> matrix_id .)
    {               reduce using rule 24 (left_value -> matrix_id .)
    RETURN          reduce using rule 24 (left_value -> matrix_id .)
    BREAK           reduce using rule 24 (left_value -> matrix_id .)
    PRINT           reduce using rule 24 (left_value -> matrix_id .)
    CONTINUE        reduce using rule 24 (left_value -> matrix_id .)
    ID              reduce using rule 24 (left_value -> matrix_id .)
    ASSIGN          reduce using rule 24 (left_value -> matrix_id .)
    PLUSASSIGN      reduce using rule 24 (left_value -> matrix_id .)
    MINUSASSIGN     reduce using rule 24 (left_value -> matrix_id .)
    TIMESASSIGN     reduce using rule 24 (left_value -> matrix_id .)
    DIVIDEASSIGN    reduce using rule 24 (left_value -> matrix_id .)


state 14

    (19) one_line_instruction -> CONTINUE .

    ;               reduce using rule 19 (one_line_instruction -> CONTINUE .)


state 15

    (10) instruction -> one_line_instruction . ;

    ;               shift and go to state 40


state 16

    (3) instructions -> instructions instruction .

    IF              reduce using rule 3 (instructions -> instructions instruction .)
    FOR             reduce using rule 3 (instructions -> instructions instruction .)
    WHILE           reduce using rule 3 (instructions -> instructions instruction .)
    {               reduce using rule 3 (instructions -> instructions instruction .)
    RETURN          reduce using rule 3 (instructions -> instructions instruction .)
    BREAK           reduce using rule 3 (instructions -> instructions instruction .)
    PRINT           reduce using rule 3 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instructions instruction .)
    ID              reduce using rule 3 (instructions -> instructions instruction .)
    $end            reduce using rule 3 (instructions -> instructions instruction .)
    }               reduce using rule 3 (instructions -> instructions instruction .)


state 17

    (7) instruction -> FOR ID . ASSIGN expression : expression instruction

    ASSIGN          shift and go to state 41


state 18

    (39) expression -> matrix .

    +               reduce using rule 39 (expression -> matrix .)
    -               reduce using rule 39 (expression -> matrix .)
    *               reduce using rule 39 (expression -> matrix .)
    /               reduce using rule 39 (expression -> matrix .)
    DOTPLUS         reduce using rule 39 (expression -> matrix .)
    DOTMINUS        reduce using rule 39 (expression -> matrix .)
    DOTTIMES        reduce using rule 39 (expression -> matrix .)
    DOTDIVIDE       reduce using rule 39 (expression -> matrix .)
    TRANSPOSITION   reduce using rule 39 (expression -> matrix .)
    ,               reduce using rule 39 (expression -> matrix .)
    ;               reduce using rule 39 (expression -> matrix .)
    EQ              reduce using rule 39 (expression -> matrix .)
    LT              reduce using rule 39 (expression -> matrix .)
    GT              reduce using rule 39 (expression -> matrix .)
    LQ              reduce using rule 39 (expression -> matrix .)
    GQ              reduce using rule 39 (expression -> matrix .)
    NE              reduce using rule 39 (expression -> matrix .)
    :               reduce using rule 39 (expression -> matrix .)
    )               reduce using rule 39 (expression -> matrix .)
    IF              reduce using rule 39 (expression -> matrix .)
    FOR             reduce using rule 39 (expression -> matrix .)
    WHILE           reduce using rule 39 (expression -> matrix .)
    {               reduce using rule 39 (expression -> matrix .)
    RETURN          reduce using rule 39 (expression -> matrix .)
    BREAK           reduce using rule 39 (expression -> matrix .)
    PRINT           reduce using rule 39 (expression -> matrix .)
    CONTINUE        reduce using rule 39 (expression -> matrix .)
    ID              reduce using rule 39 (expression -> matrix .)


state 19

    (61) expression -> EYE . ( expression )

    (               shift and go to state 42


state 20

    (18) one_line_instruction -> PRINT expressions .
    (20) expressions -> expressions . , expression

    ;               reduce using rule 18 (one_line_instruction -> PRINT expressions .)
    ,               shift and go to state 43


state 21

    (62) expression -> - . expression
    (22) expression -> . left_value
    (36) expression -> . INTEGER
    (37) expression -> . FLOAT
    (38) expression -> . STRING
    (39) expression -> . matrix
    (51) expression -> . expression + expression
    (52) expression -> . expression - expression
    (53) expression -> . expression * expression
    (54) expression -> . expression / expression
    (55) expression -> . expression DOTPLUS expression
    (56) expression -> . expression DOTMINUS expression
    (57) expression -> . expression DOTTIMES expression
    (58) expression -> . expression DOTDIVIDE expression
    (59) expression -> . ZEROS ( expression )
    (60) expression -> . ONES ( expression )
    (61) expression -> . EYE ( expression )
    (62) expression -> . - expression
    (63) expression -> . expression TRANSPOSITION
    (23) left_value -> . ID
    (24) left_value -> . matrix_id
    (40) matrix -> . [ vectors ]
    (41) matrix -> . [ matrix_elements ]
    (25) matrix_id -> . ID [ indexes ]

    INTEGER         shift and go to state 23
    FLOAT           shift and go to state 27
    STRING          shift and go to state 26
    ZEROS           shift and go to state 28
    ONES            shift and go to state 25
    EYE             shift and go to state 19
    -               shift and go to state 21
    ID              shift and go to state 4
    [               shift and go to state 24

    expression                     shift and go to state 44
    matrix                         shift and go to state 18
    matrix_id                      shift and go to state 13
    left_value                     shift and go to state 22

state 22

    (22) expression -> left_value .

    +               reduce using rule 22 (expression -> left_value .)
    -               reduce using rule 22 (expression -> left_value .)
    *               reduce using rule 22 (expression -> left_value .)
    /               reduce using rule 22 (expression -> left_value .)
    DOTPLUS         reduce using rule 22 (expression -> left_value .)
    DOTMINUS        reduce using rule 22 (expression -> left_value .)
    DOTTIMES        reduce using rule 22 (expression -> left_value .)
    DOTDIVIDE       reduce using rule 22 (expression -> left_value .)
    TRANSPOSITION   reduce using rule 22 (expression -> left_value .)
    ,               reduce using rule 22 (expression -> left_value .)
    ;               reduce using rule 22 (expression -> left_value .)
    EQ              reduce using rule 22 (expression -> left_value .)
    LT              reduce using rule 22 (expression -> left_value .)
    GT              reduce using rule 22 (expression -> left_value .)
    LQ              reduce using rule 22 (expression -> left_value .)
    GQ              reduce using rule 22 (expression -> left_value .)
    NE              reduce using rule 22 (expression -> left_value .)
    :               reduce using rule 22 (expression -> left_value .)
    )               reduce using rule 22 (expression -> left_value .)
    IF              reduce using rule 22 (expression -> left_value .)
    FOR             reduce using rule 22 (expression -> left_value .)
    WHILE           reduce using rule 22 (expression -> left_value .)
    {               reduce using rule 22 (expression -> left_value .)
    RETURN          reduce using rule 22 (expression -> left_value .)
    BREAK           reduce using rule 22 (expression -> left_value .)
    PRINT           reduce using rule 22 (expression -> left_value .)
    CONTINUE        reduce using rule 22 (expression -> left_value .)
    ID              reduce using rule 22 (expression -> left_value .)


state 23

    (36) expression -> INTEGER .

    +               reduce using rule 36 (expression -> INTEGER .)
    -               reduce using rule 36 (expression -> INTEGER .)
    *               reduce using rule 36 (expression -> INTEGER .)
    /               reduce using rule 36 (expression -> INTEGER .)
    DOTPLUS         reduce using rule 36 (expression -> INTEGER .)
    DOTMINUS        reduce using rule 36 (expression -> INTEGER .)
    DOTTIMES        reduce using rule 36 (expression -> INTEGER .)
    DOTDIVIDE       reduce using rule 36 (expression -> INTEGER .)
    TRANSPOSITION   reduce using rule 36 (expression -> INTEGER .)
    ,               reduce using rule 36 (expression -> INTEGER .)
    ;               reduce using rule 36 (expression -> INTEGER .)
    EQ              reduce using rule 36 (expression -> INTEGER .)
    LT              reduce using rule 36 (expression -> INTEGER .)
    GT              reduce using rule 36 (expression -> INTEGER .)
    LQ              reduce using rule 36 (expression -> INTEGER .)
    GQ              reduce using rule 36 (expression -> INTEGER .)
    NE              reduce using rule 36 (expression -> INTEGER .)
    :               reduce using rule 36 (expression -> INTEGER .)
    )               reduce using rule 36 (expression -> INTEGER .)
    IF              reduce using rule 36 (expression -> INTEGER .)
    FOR             reduce using rule 36 (expression -> INTEGER .)
    WHILE           reduce using rule 36 (expression -> INTEGER .)
    {               reduce using rule 36 (expression -> INTEGER .)
    RETURN          reduce using rule 36 (expression -> INTEGER .)
    BREAK           reduce using rule 36 (expression -> INTEGER .)
    PRINT           reduce using rule 36 (expression -> INTEGER .)
    CONTINUE        reduce using rule 36 (expression -> INTEGER .)
    ID              reduce using rule 36 (expression -> INTEGER .)


state 24

    (40) matrix -> [ . vectors ]
    (41) matrix -> [ . matrix_elements ]
    (42) vectors -> . vectors , vector
    (43) vectors -> . vector
    (45) matrix_elements -> . matrix_elements , ID
    (46) matrix_elements -> . matrix_elements , FLOAT
    (47) matrix_elements -> . matrix_elements , INTEGER
    (48) matrix_elements -> . ID
    (49) matrix_elements -> . INTEGER
    (50) matrix_elements -> . FLOAT
    (44) vector -> . [ matrix_elements ]

    ID              shift and go to state 51
    INTEGER         shift and go to state 48
    FLOAT           shift and go to state 50
    [               shift and go to state 46

    vector                         shift and go to state 45
    matrix_elements                shift and go to state 47
    vectors                        shift and go to state 49

state 25

    (60) expression -> ONES . ( expression )

    (               shift and go to state 52


state 26

    (38) expression -> STRING .
